--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//apis.google.com/js/client:plusone.js"></script>
-    <script src="upload.js"></script>
+    <script src="media-uploader.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
